5 mails sending cronjob

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "^2.29.4",
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0",
+    "node-cron": "^3.0.3",
     "pdfkit": "^0.14.0",
     "slugify": "^1.6.6",
     "stripe": "^14.2.0"
