--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,8 @@ STRIPE_WEB_HOOK="whsec_fd328eb3d63c202f2031f580e9e36e2ef27922d9b5ca746254a638669
 # Discounts
 DISCOUNT_FIVE="rkp7ttoT"
 DISCOUNT_FIVE_TEST="e3LTp5dB"
-DISCOUNT_TEN="uf3fkBJq"
-DISCOUNT_TEN_TEST="cHk1ut6E"
+DISCOUNT_TEN_TEST="OzaG50EQ"
+# real DISCOUNT_TEN_TEST="cHk1ut6E"
 
 
 # URL which customer gets redirected to when converted
@@ -18,3 +18,8 @@ CANCEL_URL="/cart"
 
 # JWT
 JWT_SECRET_KEY="123"
+
+# Cloudinary
+CLOUDINARY_NAME="dwkzjfa1m"
+CLOUDINARY_API_KEY="471489482543327"
+CLOUDINARY_API_SECRET="o3P3i44mhb3GfHaSDQoV286DGAM"
